test/parserTest/fail/test13.ic
class BadArrayDecl {
	int [10] badArray //size argument not allowed in array declaration
}